# imageloader

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md
ci/travis/: before_script.sh  install.sh  script.sh  valgrind.supp
cpp/api/: CMakeLists.txt
cpp/api/imgload/: Context.cpp  Context.hpp  Exception.cpp  Exception.hpp  Image.cpp  Image.hpp
cpp/imgload/: Context.cpp  Context.hpp  Exception.cpp
examples/: CMakeLists.txt  dump_mipmaps.c
include/: imageloader.h  imageloader_plugin.h
src/: CMakeLists.txt  context.c  context.h  dxtc.c  format.c  format.h  image.c  image.h  log.c  log.h  memory.c  memory.h  packed.h  plugin.c  plugin.h  plugin_api.c  project.h.in  util.h  version.c
src/plugins/: CMakeLists.txt
src/plugins/libddsimg/: CMakeLists.txt  ddsimg.c  ddsimg.h
src/plugins/libddsimg/libddsimg/: Doxyfile  README.md
src/plugins/libddsimg/libddsimg/examples/: CMakeLists.txt  dump_metadata.c
src/plugins/libddsimg/libddsimg/include/ddsimg/: ddsimg.h
src/plugins/libddsimg/libddsimg/src/: context.c  dxtc.h  image.h  version.c
src/plugins/libddsimg/libddsimg/test/: CMakeLists.txt
src/plugins/libddsimg/libddsimg/test/data/: DRADIS_Target.dds
src/plugins/libddsimg/libddsimg/test/src/: image_tests.cpp  test_data.cpp  test_data.h
src/plugins/pcximg/: CMakeLists.txt  plugin_pcx.c  plugin_pcx.h
src/plugins/png/: CMakeLists.txt  plugin_png.c  plugin_png.h
src/plugins/stb_image/: CMakeLists.txt  plugin_stb_image.c  plugin_stb_image.h  stb_image.c
test/: CMakeLists.txt
test/data/: Col_Viper_Mk7e_Th11.dds
test/src/: ContextFixture.cpp  ContextFixture.h  context_tests.cpp  ddsimg.cpp  pcx.cpp  png.cpp  stb_image.cpp  util.cpp  util.h
